fixed page layout issues

--- a/css/app.css
+++ b/css/app.css
@@ -96,4 +96,5 @@ section {
 
 .top-bar {
   border-radius: 8px;
+  display: inline-block;
 }
